# COTPasses

./: CMakeLists.txt  README.md
autoconf/: configure.ac
include/cot/: InstructionCount.h
lib/: CMakeLists.txt
lib/FunctionEraser/: CMakeLists.txt  FunctionEraser.cpp
lib/HelloLLVM/: CMakeLists.txt  HelloLLVM.cpp
lib/InstructionCount/: CMakeLists.txt  InstructionCount.cpp
test/: CMakeLists.txt  Makefile  lit.cfg  lit.site.cfg.in
test/COTPasses/FunctionEraser/: Fact.ll
test/COTPasses/HelloLLVM/: AddHello.ll
test/COTPasses/InstructionCount/: Fact.ll
tools/: CMakeLists.txt
tools/COTPasses/: CMakeLists.txt
